src/objects/UP_Codes__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Category_Business__c</fullName>
        <label>Current Category - Business</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>UP_Code__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RE</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>INV</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>FF</fullName>
                </value>
                <value>
                    <fullName>RF</fullName>
                </value>
                <value>
                    <fullName>PP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Category_Home__c</fullName>
        <label>Current Category - Home</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>UP_Code__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>MV</fullName>
                </value>
                <value>
                    <fullName>PP</fullName>
                </value>
                <value>
                    <fullName>RE</fullName>
                </value>
                <value>
                    <fullName>RF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loss_Verification__c</fullName>
        <description>Loss verification look up</description>
        <label>Loss Verification</label>
        <referenceTo>Loss_Verification_Inspections__c</referenceTo>
        <relationshipLabel>UP Codes</relationshipLabel>
        <relationshipName>UP_Codes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>New_Category__c</fullName>
        <label>New Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>UP_Code__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CONTENTS</fullName>
                </value>
                <value>
                    <fullName>MOTOR VEHICLE</fullName>
                </value>
                <value>
                    <fullName>REAL ESTATE (REPAIR/REPLACE)</fullName>
                </value>
                <value>
                    <fullName>REFINANCING</fullName>
                </value>
                <value>
                    <fullName>REPAY IHP</fullName>
                </value>
                <value>
                    <fullName>REAL ESTATE (OTHER)</fullName>
                </value>
                <value>
                    <fullName>MITIGATION</fullName>
                </value>
                <value>
                    <fullName>INTERIM FINANCING</fullName>
                </value>
                <value>
                    <fullName>CONTRACTOR&apos;S MALFEASANCE</fullName>
                </value>
                <value>
                    <fullName>REAL ESTATE (REPAIR/REPLACE) FOR HOMES, CONTENTS FOR BUSINESSES</fullName>
                </value>
                <value>
                    <fullName>CUSTOM - RE</fullName>
                </value>
                <value>
                    <fullName>CUSTOM - CONTENTS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UP_Code_Description__c</fullName>
        <label>UP Code Description</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>UP_Code__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Personal Property</fullName>
                </value>
                <value>
                    <fullName>Motor Vehicle</fullName>
                </value>
                <value>
                    <fullName>Manufactured Housing</fullName>
                </value>
                <value>
                    <fullName>Refinance Real Estate Lien</fullName>
                </value>
                <value>
                    <fullName>Refinance Manufactured Housing / Other Lien</fullName>
                </value>
                <value>
                    <fullName>Repay IHP Grant - Personal Property</fullName>
                </value>
                <value>
                    <fullName>Repay IHP Grant – Motor Vehicle</fullName>
                </value>
                <value>
                    <fullName>Reimbursement for Refinance Pay-Off/Down</fullName>
                </value>
                <value>
                    <fullName>Payment of One-Time Assessment (Unit Owner)</fullName>
                </value>
                <value>
                    <fullName>Real Estate Repair/Replacement</fullName>
                </value>
                <value>
                    <fullName>Real Estate Relocation Purchase/Construction</fullName>
                </value>
                <value>
                    <fullName>Total Real Estate Reconstruction (at damaged site)</fullName>
                </value>
                <value>
                    <fullName>Landscaping</fullName>
                </value>
                <value>
                    <fullName>Debris Removal</fullName>
                </value>
                <value>
                    <fullName>Other Land Improvements</fullName>
                </value>
                <value>
                    <fullName>Mitigation</fullName>
                </value>
                <value>
                    <fullName>Engineering / Architectural Reports</fullName>
                </value>
                <value>
                    <fullName>Geological Studies</fullName>
                </value>
                <value>
                    <fullName>Moving Expenses (Mandatory Relocation Only)</fullName>
                </value>
                <value>
                    <fullName>Interim Financing</fullName>
                </value>
                <value>
                    <fullName>Reserved for future use</fullName>
                </value>
                <value>
                    <fullName>Code Required Damage Structure Elevation</fullName>
                </value>
                <value>
                    <fullName>First Year&apos;s Flood Insurance Premium</fullName>
                </value>
                <value>
                    <fullName>Typhoon Repair</fullName>
                </value>
                <value>
                    <fullName>Typhoon Real Estate Replacement</fullName>
                </value>
                <value>
                    <fullName>Contractor Malfeasance</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Machinery and Equipment</fullName>
                </value>
                <value>
                    <fullName>Furniture and Fixtures</fullName>
                </value>
                <value>
                    <fullName>Leasehold Improvements</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UP_Code__c</fullName>
        <label>UP Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UP-01</fullName>
                </value>
                <value>
                    <fullName>UP-02</fullName>
                </value>
                <value>
                    <fullName>UP-04</fullName>
                </value>
                <value>
                    <fullName>UP-05</fullName>
                </value>
                <value>
                    <fullName>UP-06</fullName>
                </value>
                <value>
                    <fullName>UP-07</fullName>
                </value>
                <value>
                    <fullName>UP-08</fullName>
                </value>
                <value>
                    <fullName>UP-09</fullName>
                </value>
                <value>
                    <fullName>UP-17</fullName>
                </value>
                <value>
                    <fullName>UP-18</fullName>
                </value>
                <value>
                    <fullName>UP-19</fullName>
                </value>
                <value>
                    <fullName>UP-20</fullName>
                </value>
                <value>
                    <fullName>UP-24</fullName>
                </value>
                <value>
                    <fullName>UP-25</fullName>
                </value>
                <value>
                    <fullName>UP-26</fullName>
                </value>
                <value>
                    <fullName>UP-27</fullName>
                </value>
                <value>
                    <fullName>UP-28</fullName>
                </value>
                <value>
                    <fullName>UP-29</fullName>
                </value>
                <value>
                    <fullName>UP-30</fullName>
                </value>
                <value>
                    <fullName>UP-40</fullName>
                </value>
                <value>
                    <fullName>UP-41</fullName>
                </value>
                <value>
                    <fullName>UP-42</fullName>
                </value>
                <value>
                    <fullName>UP-43</fullName>
                </value>
                <value>
                    <fullName>UP-44</fullName>
                </value>
                <value>
                    <fullName>UP-45</fullName>
                </value>
                <value>
                    <fullName>UP-50</fullName>
                </value>
                <value>
                    <fullName>UP-51</fullName>
                </value>
                <value>
                    <fullName>UP-52</fullName>
                </value>
                <value>
                    <fullName>UP-53</fullName>
                </value>
                <value>
                    <fullName>UP-54</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>UP Code</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UP-{000000}</displayFormat>
        <label>UP Codes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UP Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>